--- a/pom.xml
+++ b/pom.xml
@@ -49,4 +49,35 @@
 
     </dependencies>
 
+
+
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                    <configuration>
+<!--                        you can indicate specific xml files to run -->
+<!--                       <suiteXmlFiles>-->
+<!--                           <suiteXmlFile>smoke_tests.xml</suiteXmlFile>-->
+<!--                           <suiteXmlFile>crossbrowser_tests.xml</suiteXmlFile>-->
+<!--                       </suiteXmlFiles>-->
+
+                        <suiteXmlFiles>
+                            <!--to run different xml files thru cmd -->
+                            <suiteXmlFile>${xmlFile}</suiteXmlFile>
+
+                        </suiteXmlFiles>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+
+
+
 </project>
