--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 url=http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/Login.aspx
 username=Tester
 password=test
-browser=chrome
+browser=firefox
 implicitTimeout=10
