--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,20 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
+
 
 
 
@@ -68,6 +82,7 @@
 
                         <suiteXmlFiles>
                             <!--to run different xml files thru cmd -->
+                            <!--suppress UnresolvedMavenProperty -->
                             <suiteXmlFile>${xmlFile}</suiteXmlFile>
 
                         </suiteXmlFiles>
